--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "annual-report-2",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
@@ -6,6 +7,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
+    "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^5.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
